# SE-Course-backend

./: .env.example  .envdocker  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  dockerignore  mcp.json  pyproject.toml  requirements.txt
data/: auth.db
scripts/: run.py  run.sh
src/: agent.py  api.py  app.py  database.py  explainAgent.py  llmClient.py  main.py  mcpClient.py  questionAgent.py  requirements_agent.py  retrieve.py  run_api.py  umlAgent.py  vectorStore.py
src/agents/: agent.py  explainAgent.py  paperAgent.py  questionAgent.py  reviewplanAgent.py  testAgent.py  umlAgent.py
src/auth/: __init__.py  auth.py  models.py  routes.py
src/models/: practice_history.py  review_plan.py
src/utils/: conversation_logger.py  load_json.py  logger.py  uml_mcp_server.py
