[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
    "dashscope==1.20.4",
    "docx2txt==0.8",
    "faiss-cpu==1.8.0.post1",
    "fastapi==0.112.0",
    "gradio==4.44",
    "httpx==0.27.0",
    "llama-index-core==0.10.67",
    "llama-index-embeddings-dashscope==0.1.4",
    "llama-index-postprocessor-dashscope-rerank-custom==0.1.0",
    "llama-index-readers-file==0.1.33",
    "llama-index-vector-stores-faiss==0.1.2",
    "matplotlib==3.9.3",
    "mcp>=1.2.0",
    "openai==1.55.3",
    "openpyxl==3.1.5",
    "psutil>=7.0.0",
    "pydantic==2.10.6",
    "pydantic[email]==2.10.6",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.5",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "requests>=2.28.0",
    "simplejson==3.19.3",
    "uvicorn==0.30.6",
]
